docs+ui: full README + IBM Carbon-style dashboard
README:
- watsonx 3-layer architecture diagram + mapping
- Tech stack with rationale, quick start, API examples
- Storage efficiency comparison (JSON 54KB -> Parquet 7.8KB, 7x)
- What I Learned (Java 21 + Hadoop, Gemma thinking, etc.)
- Roadmap

Frontend (static/):
- IBM Carbon-inspired dashboard at /
- Plain CSS, no external CDN dependencies
- Tabs: Ask / Ingest / Articles / Audit Trail
- Dark header, IBM Blue accent, sharp edges